Text renderer, game over handler

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
 Better portal artwork
 Sounds/music
 Finish maps
-Death/game over system
+Death/game over system - display score
 Reset cube on cube clear and leave (and tap?)
 Tap to ignore portalmaking
 Only can connect portal going through
